Just updated gitignore file to ignore files generated by JetBrain IDEs

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,13 @@ local.properties
 # PDT-specific
 .buildpath
 
+#################
+## IntelliJ
+#################
+*.iws
+*.ipr
+*.iml
+.idea/
 
 #################
 ## Visual Studio
