--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ addons:
 before_install: luarocks install --local luacheck
 
 before_script: /home/travis/.luarocks/bin/luacheck Interface -q
-script: utils/release.sh -l -w 16068
+script: bash utils/release.sh -l -w 16068
