--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,11 @@ addons:
 
 before_install: luarocks install --local luacheck
 
-before_script: /home/travis/.luarocks/bin/luacheck Interface -q
-script: bash utils/release.sh -l -w 16068
+#before_script: /home/travis/.luarocks/bin/luacheck Interface -q
+#script: bash utils/release.sh -l -w 16068
+
+jobs:
+  include:
+    - script: /home/travis/.luarocks/bin/luacheck Interface -q
+    - stage: package
+      script: bash utils/release.sh -l -w 16068
