--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
 before_install: luarocks install --local luacheck
 
 before_script: /home/travis/.luarocks/bin/luacheck . -q
-script: bash utils/release.sh -p 88269 -w 16068
+script: bash utils/release.sh -L -p 88269 -w 16068
 
 #jobs:
 #  include:
