--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,11 @@ language: c
 addons:
   apt:
     packages:
-    - luarocks
-    - pandoc
+      - luarocks
+      - pandoc
 
-before_install: luarocks install --local luacheck
-
-before_script: /home/travis/.luarocks/bin/luacheck . -q
-script: bash utils/release.sh -L -p 88269 -w 16068
-
-#jobs:
-#  include:
-#    - script: /home/travis/.luarocks/bin/luacheck Interface -q
-#    - stage: package
-#      script: bash utils/release.sh -l -w 16068
+install: luarocks install --local luacheck
+before_script: $HOME/.luarocks/bin/luacheck . -q
+script:
+  - curl -s https://raw.githubusercontent.com/Gethe/packager/RealUI/release.sh -o release.sh
+  - bash release.sh -L -p 88269 -w 16068
