--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
-# These are supported funding model platforms
-
-# github: Gethe
+github: Gethe
 patreon: RealUI
 ko_fi: Gethe88
+custom: ['https://paypal.me/timwest88']
