--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,31 +1,21 @@
-name: CI
+name: Nightly Alpha
 
 on:
-  push:
-    branches:
-      - master
-    tags:
-      - '*'
+  schedule:
+    - cron: '0 7 * * *'
 
 jobs:
-  build:
+  nightly:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v1
 
-    - name: Run Luacheck
-      uses: nebularg/actions-luacheck@v1
-      with:
-        args: --no-color -q
-        annotate: warning
-        
     - name: Create Package
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
       run: |
         sudo apt-get install pandoc
         curl -s https://raw.githubusercontent.com/Gethe/packager/RealUI/release.sh -o release.sh
-        bash release.sh -L -p 88269 -w 16068
+        bash release.sh -L -p 88269
