--- a/.github/workflows/tag_beta.yml
+++ b/.github/workflows/tag_beta.yml
@@ -1,9 +1,9 @@
-name: Weekly Beta
+name: Tag Beta
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 7 * * 6'
+  push:
+    branches:
+      - main
 
 jobs:
   release:
@@ -12,14 +12,14 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: What day it it?
-      id: date
-      run: |
-        echo "::set-output name=day::$(date +%d)"
+    - name: Run Luacheck
+      uses: nebularg/actions-luacheck@v1
+      with:
+        args: --no-color -q
+        annotate: warning
 
     - name: Check
       run: |
-        echo ${{ steps.date.outputs.day }}
         echo ${{ github.event }}
         echo ${{ github.event_name }}
         echo ${{ github.event_path }}
@@ -27,7 +27,6 @@ jobs:
 
     - name: Set beta
       id: beta
-      if: (steps.date.outputs.day > 7) || (github.event_name == 'workflow_dispatch')
       uses: onemedical/action-general-autotag@main
       with:
         GITHUB_TOKEN: ${{ secrets.REPOSITORY_ACCESS_TOKEN }}
