--- a/.github/workflows/package_beta.yml
+++ b/.github/workflows/package_beta.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Create Beta Package
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
+        WAGO_API_KEY: ${{ secrets.WAGO_API_KEY }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
       run: |
         rm -f CHANGELOG.md
