--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -2,32 +2,44 @@ name: Monthly Release
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 7 * * 6'
+  push:
+    branches:
+      - main
 
 jobs:
-  release:
+  check:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Check for release version
+      uses: actions/github-script@v5
+      id: check
+      with:
+        script: |
+          const { owner, repo } = context.repo
+          const regex = /\d+\.\d+\.\d+/g;
+          if (regex.test(`${{ github.event.head_commit.message }}`)) {
+            return "build"
+          } else {
+            const run_id = "${{ github.run_id }}";
+            await github.rest.actions.cancelWorkflowRun({ owner, repo, run_id });
+          }
+        result-encoding: string
 
-    - name: What day it it?
-      id: date
-      run: |
-        echo "::set-output name=day::$(date +%d)"
+  tag:
+    needs: check
+    runs-on: ubuntu-latest
 
-    - name: Check
-      run: |
-        echo ${{ steps.date.outputs.day }}
-        echo ${{ github.event }}
-        echo ${{ github.event_name }}
-        echo ${{ github.event_path }}
-        echo ${{ github.ref }}
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Run Luacheck
+      uses: nebularg/actions-luacheck@v1
+      with:
+        args: --no-color -q
+        annotate: warning
 
     - name: Set release
-      id: release
-      if: (steps.date.outputs.day <= 7) || (github.event_name == 'workflow_dispatch')
       uses: onemedical/action-general-autotag@main
       with:
         GITHUB_TOKEN: ${{ secrets.REPOSITORY_ACCESS_TOKEN }}
