chg: updated FUNDING yaml file

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
-github: Gethe
-patreon: RealUI
-ko_fi: Gethe88
-custom: ['https://paypal.me/timwest88']
+github: Arnvid
+patreon: Hanshi
+custom: ['https://paypal.me/arnvid303']
