--- a/.github/workflows/tag_beta.yml
+++ b/.github/workflows/tag_beta.yml
@@ -4,7 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - dev
+      - ptr
+      - beta
 
 jobs:
   check:
@@ -12,7 +14,7 @@ jobs:
 
     steps:
     - name: Check for release version
-      uses: actions/github-script@v5
+      uses: actions/github-script@v7
       id: check
       with:
         script: |
@@ -30,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Run Luacheck
       uses: nebularg/actions-luacheck@v1
