chore: .github/workflows/package_release.yml fix for missing svn

--- a/.github/workflows/package_release.yml
+++ b/.github/workflows/package_release.yml
@@ -30,6 +30,6 @@ jobs:
         WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        sudo apt-get install pandoc
+        sudo apt-get install pandoc svn
         curl -s https://raw.githubusercontent.com/RealUI/packager/RealUI/release.sh -o release.sh
         bash release.sh -L -p 88269 -w 16068
