--- a/.github/workflows/package_beta.yml
+++ b/.github/workflows/package_beta.yml
@@ -33,5 +33,6 @@ jobs:
         GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
       run: |
         rm -f CHANGELOG.md
+        sudo apt-get install pandoc subversion
         curl -s https://raw.githubusercontent.com/RealUI/packager/RealUI/release.sh -o release.sh
         bash release.sh -L -p 88269
